feat: tela de dashboard

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
@@ -25,6 +26,8 @@
     "clsx": "^2.1.1",
     "cookies-next": "^4.3.0",
     "date-fns": "^3.6.0",
+    "embla-carousel-autoplay": "^8.5.1",
+    "embla-carousel-react": "^8.5.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.460.0",
     "next": "14.2.16",
@@ -35,6 +38,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
     "react-number-format": "^5.4.2",
+    "recharts": "^2.13.3",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
